--- a/WinForms_DesktopApp.csproj
+++ b/WinForms_DesktopApp.csproj
@@ -87,8 +87,23 @@
     <Compile Include="CandidateRegistry.Designer.cs">
       <DependentUpon>CandidateRegistry.cs</DependentUpon>
     </Compile>
+    <Compile Include="Candi_Management.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Candi_Management.Designer.cs">
+      <DependentUpon>Candi_Management.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CRegistry.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="difParish.cs">
       <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_Candidate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_Candidate.Designer.cs">
+      <DependentUpon>Edit_Candidate.cs</DependentUpon>
     </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
@@ -133,6 +148,12 @@
     </Compile>
     <EmbeddedResource Include="CandidateRegistry.resx">
       <DependentUpon>CandidateRegistry.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Candi_Management.resx">
+      <DependentUpon>Candi_Management.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_Candidate.resx">
+      <DependentUpon>Edit_Candidate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
